--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <header>
     <img src="DWC LOGO.png" alt="DWC Productions Logo">
     <h1>DWC Productions</h1>
-    <p>Edward Dunn • Michael Wardlow • Bill Caviler</p>
+    <p>Edward Dunn • Michael Wardlow • Bill Cavaliere</p>
   </header>
 
 <nav>
