--- a/contact.html
+++ b/contact.html
@@ -116,14 +116,13 @@
   <header>
     <img src="DWC LOGO.png" alt="DWC Productions Logo">
     <h1>DWC Productions</h1>
-    <p>Edward Dunn • Michael Wardlow • Bill Caviler</p>
+    <p>Edward Dunn • Michael Wardlow • Bill Cavaliere</p>
   </header>
 
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-    <a href="hire.html">Hire</a>
   </nav>
 
   <main>
