--- a/about.html
+++ b/about.html
@@ -94,6 +94,23 @@
   <footer>
     <p>&copy; 2025 DWC Productions. All rights reserved.</p>
   </footer>
+  <!-- Default Statcounter code for doc
+http://dwc-productions.com -->
+<script type="text/javascript">
+var sc_project=13156610; 
+var sc_invisible=1; 
+var sc_security="63926107"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/13156610/0/63926107/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
 </body>
 </html>
      
